syntax = "proto3";

package serviceuser;

option go_package = "cyber-srv/service-user";

service ServiceUser {
	rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse) {}
}

message GetUserInfoRequest{
	string id = 1;
}

message GetUserInfoResponse{
	User user =1;
}

message User{
	string id = 1;
	string name = 2;
	string email = 3;
	string phone = 4;
}